# MLDL_miniproject

./: .gitignore  AGENTS.md  Ocular_Gender_Classification_Report.docx  build_dataset_manifest.py  create_train_val_test_split.py  dataset_audit_report.md  efficientnet_b0_model.py  gender_dataset.py  gender_dataset_smoke_test.py  image_decode.py  masterplan.md  model_smoke_test.py  notebook.ipynb  parse_demographics.py  parse_quality_metadata.py  preprocessing.py  preprocessing_smoke_test.py  progress.md  pyproject.toml  train_phase1.py  train_phase2.py  training_utils.py  training_utils_smoke_test.py  validate_preprocessing_batch.py
